import cards into app.js and create class Deck which takes cards as a param. Create a function which returns the cards array in a random order

--- a/_base.scss
+++ b/_base.scss
@@ -56,8 +56,8 @@ $border: 2px solid black;
   }
   #board {
     display: flex;
+    gap: 10px;
     grid-area: board;
-    border: $border;
   }
   #score_area {
     grid-area: score;
