--- a/_base.scss
+++ b/_base.scss
@@ -14,6 +14,14 @@ $border: 2px solid black;
   height: 10vh;
 }
 
+.card {
+  font-size: 150px;
+  position: absolute;
+  border-radius: 10px;
+  background-color: white;
+  color: blue;
+}
+
 .main {
   display: grid;
   gap: 10px;
@@ -34,15 +42,6 @@ $border: 2px solid black;
       align-items: center;
       h2 {
         align-self: flex-start;
-      }
-      .card {
-        width: 150px;
-        height: 200px;
-        border: $border;
-        position: absolute;
-      }
-      .card:nth-child(2n + 0) {
-        transform: translateX(4px) translateY(4px);
       }
     }
   }
