--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,14 @@
   height: 10vh;
 }
 
+.card {
+  font-size: 150px;
+  position: absolute;
+  border-radius: 10px;
+  background-color: white;
+  color: blue;
+}
+
 .main {
   display: -ms-grid;
   display: grid;
@@ -48,18 +56,6 @@
 .main .board__pile h2 {
   -ms-flex-item-align: start;
       align-self: flex-start;
-}
-
-.main .board__pile .card {
-  width: 150px;
-  height: 200px;
-  border: 2px solid black;
-  position: absolute;
-}
-
-.main .board__pile .card:nth-child(2n + 0) {
-  -webkit-transform: translateX(4px) translateY(4px);
-          transform: translateX(4px) translateY(4px);
 }
 
 .main #player_1 {
