--- a/_base.scss
+++ b/_base.scss
@@ -7,6 +7,13 @@
 
 $border: 2px solid black;
 
+.red {
+  color: rgb(248, 80, 80);
+}
+.black {
+  color: rgb(39, 39, 39);
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -19,7 +26,6 @@ $border: 2px solid black;
   // position: absolute;
   border-radius: 10px;
   background-color: white;
-  color: blue;
 }
 .card--main {
   position: absolute;
