--- a/_base.scss
+++ b/_base.scss
@@ -11,7 +11,7 @@ $border: 2px solid black;
   color: rgb(248, 80, 80);
 }
 .black {
-  color: rgb(39, 39, 39);
+  color: #272727;
 }
 
 .header {
@@ -23,8 +23,9 @@ $border: 2px solid black;
 
 .card {
   font-size: 150px;
-  // position: absolute;
+  border: 2px solid #272727;
   border-radius: 10px;
+  padding: 0;
   background-color: white;
 }
 .card--main {
@@ -43,6 +44,7 @@ $border: 2px solid black;
     "p1 board p2"
     "score score score";
   .board {
+    width: 50vw;
     &__pile {
       border: $border;
       width: 100%;
