create top down layout to work better with mobile

--- a/_base.scss
+++ b/_base.scss
@@ -18,12 +18,12 @@ $border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10vh;
+  height: 5vh;
 }
 
 .card {
-  font-size: 150px;
-  border: 2px solid #272727;
+  font-size: 3.5rem;
+  // border: 1px solid #272727;
   border-radius: 10px;
   padding: 0;
   background-color: white;
@@ -34,45 +34,54 @@ $border: 2px solid black;
 
 .main {
   display: grid;
-  gap: 10px;
   height: 90vh;
-  grid-template-columns: 20vw, 60vw, 20vw;
-  grid-template-rows: 5vh, 30vh, 30vh, 10vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   grid-template-areas:
-    "p1 board p2"
-    "p1 board p2"
-    "p1 board p2"
+    "p1 p1 p1"
+    "suit suit suit"
+    "board board board"
+    "board board board"
+    "p2 p2 p2"
     "score score score";
   .board {
-    width: 50vw;
     &__pile {
-      border: $border;
-      width: 100%;
+      width: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
-      h2 {
-        align-self: flex-start;
-      }
     }
   }
   .player {
     &__cards {
       display: flex;
       flex-wrap: wrap;
-      .card {
-        font-size: 100px;
-      }
+      justify-content: center;
+      // .card {
+      //   font-size: 100px;
+      // }
     }
+  }
+  #score_area {
+    .round {
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: flex-start;
+    }
+  }
+  #played_suit {
+    grid-area: suit;
   }
 
   #player_1 {
     grid-area: p1;
-    border: $border;
   }
   #player_2 {
     grid-area: p2;
-    border: $border;
   }
   #board {
     display: flex;
@@ -81,6 +90,5 @@ $border: 2px solid black;
   }
   #score_area {
     grid-area: score;
-    border: $border;
   }
 }
