--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@
   border-radius: 10px;
   padding: 0;
   background-color: white;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .card--main {
