--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@
   position: absolute;
 }
 
+h2 {
+  padding: 2rem;
+}
+
 .main {
   display: -ms-grid;
   display: grid;
@@ -58,7 +62,7 @@
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[6];
       grid-template-rows: repeat(6, 1fr);
-      grid-template-areas: "p1 p1 p1" "suit suit suit" "board board board" "board board board" "p2 p2 p2" "score score score";
+      grid-template-areas: "p1 p1 p1" "suit suit suit" ". board ." ". board ." "p2 p2 p2" "score score score";
 }
 
 .main .board__pile {
@@ -129,8 +133,7 @@
   gap: 10px;
   -ms-grid-row: 3;
   -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
+  -ms-grid-column: 2;
   grid-area: board;
 }
 
