--- a/_base.scss
+++ b/_base.scss
@@ -6,6 +6,11 @@
   font-family: "Courier New", Courier, monospace;
 }
 
+body {
+  background-color: rgb(82, 151, 82);
+  color: whitesmoke;
+}
+
 .red {
   color: rgb(248, 80, 80);
 }
@@ -22,7 +27,6 @@
 
 .card {
   font-size: 3.5rem;
-  // border: 1px solid #272727;
   border-radius: 10px;
   padding: 0;
   background-color: white;
@@ -32,14 +36,31 @@
   position: absolute;
 }
 
+.hidden {
+  display: hidden;
+}
+
+h1,
+h2,
+p {
+  padding: 0.5rem;
+}
 h2 {
-  padding: 2rem;
+  span {
+    font-size: 1rem;
+    color: rgb(168, 218, 251);
+  }
+}
+
+header {
+  margin-top: 2rem;
 }
 
 .main {
   display: grid;
   height: 90vh;
-  width: 100vw;
+  width: 90vw;
+  margin: auto;
   justify-content: center;
   align-items: center;
   grid-template-columns: repeat(3, 1fr);
@@ -50,7 +71,7 @@ h2 {
     ". board ."
     ". board ."
     "p2 p2 p2"
-    "score score score";
+    ". score .";
   .board {
     &__pile {
       width: 50%;
@@ -60,6 +81,10 @@ h2 {
     }
   }
   .player {
+    &__title {
+      color: rgb(255, 116, 139);
+      text-decoration: underline;
+    }
     &__cards {
       display: flex;
       flex-wrap: wrap;
@@ -94,6 +119,14 @@ h2 {
   }
 }
 
-// @media screen and{
-
-// }
+@media screen and(min-width: 800px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .card {
+    font-size: 6rem;
+  }
+}
