--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
   font-family: "Courier New", Courier, monospace;
 }
 
+body {
+  background-color: #529752;
+  color: whitesmoke;
+}
+
 .red {
   color: #f85050;
 }
@@ -43,15 +48,31 @@
   position: absolute;
 }
 
-h2 {
-  padding: 2rem;
+.hidden {
+  display: hidden;
+}
+
+h1,
+h2,
+p {
+  padding: 0.5rem;
+}
+
+h2 span {
+  font-size: 1rem;
+  color: #a8dafb;
+}
+
+header {
+  margin-top: 2rem;
 }
 
 .main {
   display: -ms-grid;
   display: grid;
   height: 90vh;
-  width: 100vw;
+  width: 90vw;
+  margin: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -62,7 +83,7 @@ h2 {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[6];
       grid-template-rows: repeat(6, 1fr);
-      grid-template-areas: "p1 p1 p1" "suit suit suit" ". board ." ". board ." "p2 p2 p2" "score score score";
+      grid-template-areas: "p1 p1 p1" "suit suit suit" ". board ." ". board ." "p2 p2 p2" ". score .";
 }
 
 .main .board__pile {
@@ -76,6 +97,11 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.main .player__title {
+  color: #ff748b;
+  text-decoration: underline;
 }
 
 .main .player__cards {
@@ -139,8 +165,19 @@ h2 {
 
 .main #score_area {
   -ms-grid-row: 6;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
+  -ms-grid-column: 2;
   grid-area: score;
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .card {
+    font-size: 6rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
