--- a/_base.scss
+++ b/_base.scss
@@ -3,7 +3,8 @@
   margin: 0;
   text-align: center;
   box-sizing: border-box;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 body {
@@ -28,9 +29,10 @@ body {
 .card {
   font-size: 3.5rem;
   border-radius: 10px;
-  padding: 0;
   background-color: white;
   user-select: none;
+  padding: 0.1rem;
+  margin: 0.1rem;
 }
 .card--main {
   position: absolute;
@@ -47,9 +49,12 @@ p {
 }
 h2 {
   span {
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: rgb(168, 218, 251);
   }
+}
+p {
+  font-size: 1.3rem;
 }
 
 header {
@@ -63,6 +68,7 @@ header {
   margin: auto;
   justify-content: center;
   align-items: center;
+  gap: 10px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(6, 1fr);
   grid-template-areas:
@@ -76,7 +82,7 @@ header {
     &__pile {
       width: 50%;
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
     }
   }
@@ -91,6 +97,7 @@ header {
       justify-content: center;
     }
   }
+
   #score_area {
     .round {
       display: flex;
