--- a/_base.scss
+++ b/_base.scss
@@ -38,10 +38,6 @@ body {
   position: absolute;
 }
 
-.hidden {
-  display: hidden;
-}
-
 h1,
 h2,
 p {
@@ -135,5 +131,8 @@ header {
   }
   .card {
     font-size: 6rem;
+  }
+  h4 {
+    font-size: 1.5rem;
   }
 }
