--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,19 @@ p {
 }
 
 header {
-  margin-top: 2rem;
+  margin: 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+header #restart {
+  font-size: 1.5rem;
+  padding: 8px;
 }
 
 .main {
